# DArr

./: .gitmodules  Makefile.am  README.md  configure.ac
Array/: configure.ac
Array/src/: Makefile-LIBADD.inc  Makefile.am  array.h
src/: Makefile-LIBADD.inc  Makefile.am  darr-resize.c  darr-resize.h  darr-test.c  darr-test.pc.in  darr.c  darr.h  darr_test_config  libarray.c  libdarr-resize.c  libdarr-resize.pc.in  libdarr.c  libdarr.pc.in  libdarr_config
